Correction: cards width on tablet screen

--- a/assets/style.css
+++ b/assets/style.css
@@ -426,7 +426,7 @@ a {
 }
 @media screen and (min-width: 768px) {
   .card {
-    width: 350px;
+    width: 330px;
   }
 }
 .card__infos {
